# VCCSim

./: .gitignore  .gitmodules  LICENSE  README.md  VCCSim.uplugin
Client/CppClient/: CMakeLists.txt  Readme.md  setup.cmd  setup.sh
Client/CppClient/include/: VCCSimClient.h
Client/CppClient/source/: VCCSimClient.cpp
Client/CppClient/test_src/: mesh_manager.cpp
Client/PyClient/: Readme.md  requirements.txt  setup.cmd  setup.sh
Client/PyClient/Scripts/: ouhuang_3.txt  test.py
Client/PyClient/VCCSim/: VCCSimClient.py  VCCSim_pb2.py  VCCSim_pb2_grpc.py  __init__.py
Client/PyClient/test_scripts/: 5c_test.py  VCCSim_api_test.py  car_path_test.py  car_pose_test.py  drone_path_test.py  flashpawn_test.py  mesh_manager.py  sensor_test.py
Client/ros_client/: CMakeLists.txt  package.xml
Client/ros_client/config/: vccsim_config.rviz  vccsim_nvblox.rviz
Client/ros_client/config/nvblox/: nvblox_sim.yaml
Client/ros_client/include/: client_base.hpp
Client/ros_client/launch/: vccsim_base_node.launch.py  vccsim_base_node.luanch.py  vccsim_nvblox.launch.py
Client/ros_client/src/: client_base.cpp  client_for_nvblox.cpp
Config/: DefaultVCCSim.ini
Content/CinematicCarRig/Blueprints/: BP_CinematicCarRig_Pawn.uasset  BP_Path.uasset
Content/CinematicCarRig/Required/: BI_EditorTick.uasset  T_PathBillboard.uasset
Content/GameMenu/: BP_MainMenuWidgets.uasset  BP_PauseMenuWidget.uasset  BP_PauseMenuWidgetV.uasset  BP_RatSimGameInstance.uasset  BP_VCCSimGameInstance.uasset  IA_RATSIM_Pause.uasset  IMC_RATSIM_Default.uasset  MainMenuLevel.umap  TestScene.umap
Content/HUD/: BP_RatHUD.uasset  BP_RatSIMDisplayWidget_VF.uasset  BP_RatSimGameMode.uasset  BP_VCCHUD.uasset  BP_VCCSIMDisplayWidget_VF.uasset  BP_VCCSimGameMode.uasset  M_DepthVisualization.uasset  M_DepthVisualization_VF.uasset  M_MeshVisualization.uasset  M_RGBVisualization.uasset  M_SegVisualization.uasset
Content/Inputs/: IA_VCCSIM_Pause.uasset  IA_VCCSIM_Recoding.uasset  IMC_VCCSIM_Default.uasset
Content/Lidar/Materials/: M_Point.uasset
Content/Materials/: M_Coverage.uasset  M_Covered.uasset  M_Dynamic_mesh.uasset  M_Multiple_Frame.uasset  M_Point_Color.uasset  M_Rat_Path_Blue.uasset  M_Rat_Path_ice.uasset  M_SafeZone.uasset  M_Segmentation.uasset  M_Single_Frame.uasset  M_Static_mesh.uasset  M_Transparent.uasset  M_Uncovered.uasset
Content/Pawn/Drone/: BP_AttitudeDrone.uasset  BP_PreciseDrone.uasset  BP_PreciseDrone_1C_1D_L.uasset  BP_PreciseDrone_1C_1D_L_FP.uasset  BP_PreciseDrone_1C_1D_L_No_Camera.uasset  BP_PreciseDrone_5C.uasset  BP_QuadcopterDrone.uasset  BP_QuadcopterDrone_5Camera.uasset  BP_SimDrone.uasset
Content/Pawn/Drone/Input/: RSD_IA_Look.uasset  RSD_MovementAction.uasset  RSD_ThrottleAction.uasset  RSD_YawAction.uasset  RatSim_Drone_InputMappingContext.uasset  VCCSim_Drone_InputMappingContext.uasset
Content/Pawn/Drone/Inspire2/: BP_PreciseDrone_1C_1D_L_I.uasset
Content/Pawn/Drone/M3P_Blade/: M_Mavic3Pro_Blade.uasset  M_Mavic3Pro_Blade_Motion_Blur.uasset  MavicBlade.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_2.uasset
Content/Pawn/Drone/M3P_Bone/: WM261_uv_0407_sp_jishen_AO-WM261_uv_0407_sp_jishen_Roughness-WM.uasset  WM261_uv_0407_sp_jishen_BaseColor.uasset  WM261_uv_0407_sp_jishen_Normal.uasset  glass.uasset  jishen.uasset
Content/Pawn/Drone/Mavic3Pro_Blade/: M_Mavic3Pro_Blade.uasset  M_Mavic3Pro_Blade_Motion_Blur.uasset  MavicBlade.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_2.uasset
Content/Pawn/Drone/Mavic3Pro_Bone/: WM261_uv_0407_sp_jishen_AO-WM261_uv_0407_sp_jishen_Roughness-WM.uasset  WM261_uv_0407_sp_jishen_BaseColor.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_1.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_10.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_100.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_101.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_102.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_103.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_104.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_105.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_106.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_107.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_108.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_109.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_11.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_110.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_111.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_112.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_113.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_114.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_115.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_116.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_117.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_118.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_119.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_12.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_120.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_121.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_122.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_123.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_124.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_125.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_126.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_127.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_128.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_129.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_13.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_130.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_131.uasset  WM261_uv_0407_sp_jishen_BaseColor_ncl1_132.uasset  (+247 more)
Content/Pawn/Drone/mini/: BP_PreciseDrone_1C_1D_L_M.uasset
Content/Pawn/Flash/: BP_FlashPawn.uasset
Content/Pawn/Husky/Blueprints/: BP_Husky.uasset  (+1 more)
Content/Pawn/Path/: BP_RatSimPath.uasset  BP_VCCSim_Path.uasset
Content/Simulation/: BP_SceneAnalyzer.uasset  Cube_NoNanite.uasset  Plane_NoNanite.uasset
Content/Videos/: GINight.uasset  MainMenu.uasset  MainMenu_Video.uasset  MainMenu_Video_Mat.uasset
Resources/: RSConfig.md
Source/VCCSim/: RSConfig.toml  VCCSim.Build.cs
Source/pb/: ProtoGen.cmd  VCCSim.proto  VCCSim_pb2.py  VCCSim_pb2_grpc.py
(+377 files in other folders)
